--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
+      //TODO - COnfigurar paths para imports
     }
   },
   "include": [
