esse repo ta um ZONA MAIS UMA MADRUGADA NESSA INSANIDADE

--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:app/lib/mapas.db"
+DATABASE_URL="file:prisma/mapas.db"
+NEXT_PUBLIC_MAPTILER_KEY = "FBcr1UfJ94yghhvyACBs"
+NEXT_PUBLIC_MAP_STYLE="https://api.maptiler.com/maps/019b7f78-6aa1-7b81-a948-4aed01823400/style.json"
